@@ -1,0 +1,8 @@
+<appengine-web-app xmlns="http://appengine.google.com/ns/1.0">
+  <application>esxx-demo</application>
+  <version>1</version>
+
+  <static-files/>
+  <system-properties/>
+  <resource-files/>
+</appengine-web-app>
